Fixed bug on how the new cards popped  up when clicked by deactivating the mainMenu card last and loafing the other card behind.

--- a/css/grid.css
+++ b/css/grid.css
@@ -18,6 +18,7 @@
 	float: left;
 	padding: 0;
 	text-align: center;
+
 }
 /*End - This piece of code was provided by Andrew Hawryshkewich*/
  /*i use this to define the width of the page */
@@ -25,6 +26,7 @@ main{
     margin-left: auto;
     margin-right: auto;
     width: 75%;
+
     margin-top:100px;
     
 }
@@ -86,7 +88,7 @@ main{
     main{
         margin-left: auto;
         margin-right: auto;
-        width: 100%;
+        width: 96%;
     
     }
     .col-3of10{
